2009-07-24  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_lock_updates): new function

2009-07-23  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_pager_mb): new function
	avatar.c (avt_pager_line, avt_pager_screen)
        (avt_pager_lines_back): new functions

	* avatarsay.c [NO_PTY] (run_info):
	use avt_pager_mb for documentation
	avatarsay.c (open_document): removed
	avtwindows.c (open_document): removed

	* avatarsay.c (avatar_command): new command "pager"

	* avatar.c (hold_update): new variable
	many functions adapted (only used for pager for now)

2009-07-19  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (avatar_command, handle_image_command)
	(handle_credits_command): allow stop to be NULL
	(APC_command): use NULL for stop

2009-07-18  Andreas K. Foerster  <info@akfoerster.de>

	* avtaddons.h, avtterm.c (avtterm_register_APC):
	new function
	avtterm.c (APC_sequence): adapted
	avatarsay.c (main, APC_command): adapted

2009-07-16  Andreas K. Foerster  <info@akfoerster.de>

	* avtaddons.h, avtmsg.c (msg_prgname): new function

2009-07-13  Andreas K. Foerster  <info@akfoerster.de>

	* avtaddons: new static library
	many files adapted

2009-07-10  Andreas K. Foerster  <info@akfoerster.de>

	* avtfilechooser.c [HAS_SCANDIR]:
	always use my "compare_dirent" instead of "alphasort"

	* avtfilechooser.c (filter): new function
	(get_directory, get_file): adapted

	* avtfilechooser.c (get_file):
	optimizations: no need for the vector pages anymore
	=> no need for MAXPAGES anymore

	* akfavatar.h (AVT_BEGIN_DECLS, AVT_END_DECLS):
	new macros

	* akfavatar.h (AVT_API): new macro (for later use)

	* akfavatar.h (AVT_DEPRECATED): improved handling

	* akfavatar.h, avatar.c (avt_get_color_name):
	returns const char*

2009-07-09  Andreas K. Foerster  <info@akfoerster.de>

	* avtter.c (avtterm_size, avtterm_update_size)
	(CSI_sequence, avtterm_initialize):