@@ -53,6 +53,7 @@ ask_drive (int max_idx)
 
 ask:
   avt_set_balloon_size (number + 1, 2 * 8 + 1);
+  avt_lock_updates (AVT_TRUE);
   avt_clear ();
 
   /* show double arrow up */
@@ -68,6 +69,7 @@ ask:
       avt_say_mb (drive);
     }
 
+  avt_lock_updates (AVT_FALSE);
   status = avt_choice (&choice, 1, number + 1, 0, AVT_FALSE, AVT_FALSE);
 
   if (choice == 1) /* home selected */
