@@ -2,6 +2,10 @@
 
 	* akfavatar.h, avatar.c (avt_lock_updates): new function
 
+	* avtfilechooser.c (new_page, avtfc_get_file):
+	speed up with avt_lock_updates
+	mingw/askdrive.c (ask_drive): also
+
 2009-07-23  Andreas K. Foerster  <info@akfoerster.de>
 
 	* akfavatar.h, avatar.c (avt_pager_mb): new function
